www/css/base/_defaults.scss
/* default html tag styles go in here */

a {
  @include font-acme;
  color: rgb(var(--col-fg-secondary));
}

abbr {
  text-decoration: unset;
}

body {
  @include alpha;

  --body-padding-side: calc(var(--dp) / 2);
  --body-padding-sides: calc(var(--body-padding-side) * 2);

  background-color: rgba(var(--col-bg-default));
  background-image: linear-gradient(
    0deg,
    rgba(var(--col-bg-opposite), 0.05),
    rgba(var(--col-bg-opposite), 0),
    rgba(var(--col-bg-opposite), 0)
  );
  color: rgba(var(--col-fg-default));
  font-family: helvetica, sans-serif;
  height: fit-content;
  margin: 0 auto;
  min-height: calc(100vh - calc(var(--dp) * 2));
  padding: var(--dp) var(--body-padding-side);
  position: relative;
  overflow-x: hidden;
  overflow-y: auto;
  width: calc(100% - var(--body-padding-sides));
  max-width: 800px;

  &.background-transition {
    transition: background-color 0.5s ease;
  }

  &:before {
    content: "";
    width: 100%;
    height: 75px;
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    background: conic-gradient(
      from 180deg at 50% 50%,
      rgb(var(--col-fg-primary)) 0deg,
      rgb(var(--col-bg-highlight)) 180deg
    );
    mix-blend-mode: normal;
    filter: blur(100px);
    transition: background-color 0.5s ease;
  }

  &:after {
    content: "";
    height: 100%;
    width: 105%;
    position: absolute;
    background-color: rgba(var(--col-bg-default));
    z-index: -2;
    top: 0;
    left: -2.5%;
    transition: background-color 0.5s ease;
  }

  @media only screen and (min-width: 864px) {
    --body-padding-side: var(--dp);
  }
}

blockquote {
  font-style: italic;

  &:before {
    position: relative;
    left: -25px;
    top: 15px;
    content: open-quote;
    font-size: 3.5em;
    line-height: 0;
    display: block;
    width: 30px;
  }

  &:after {
    position: relative;
    left: calc(100% - 5px);
    content: close-quote;
    font-size: 3.5em;
    line-height: 0;
    display: block;
    width: 30px;
  }

  &:hover:before,
  &:hover:after {
    animation-name: spin-with-skip;
    animation-duration: 1500ms;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in;
  }
}

code {
  font-family: monospace !important;
  font-size: 16px;
  * {
    // within highlight js, unset so classes will be visible
    font-family: monospace !important;
    color: unset;
  }
}

dialog {
  width: 500px;
  max-width: 100%;
  &::backdrop {
    height: 100%;
    width: 100%;
    background: rgba(255, 255, 255, 0.15);
    backdrop-filter: blur(3px);
    opacity: 0.5;
    cursor: pointer;
  }
  &:hover {
    cursor: pointer;
  }
}

header {
  height: 34px;
}

summary {
  cursor: pointer;
}

ul {
  &.no-dots {
    list-style-type: none;
  }
}

/* custom elements */

[htmlCommentToggle] {
  font-weight: bold;
  font-size: 24px;
  animation: twitchy var(--animation-duration--twitchy) ease-in-out forwards
    infinite;
  &:hover {
    cursor: context-menu;
  }
}

[htmlCommentRevealed] {
  font-style: italic;
  &:hover {
    cursor: pointer;
  }
}

[htmlCommentRevealed],
[htmlCommentToggle] {
  color: rgb(var(--col-fg-secondary));
}

